# imgcmp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
